--- a/style.css
+++ b/style.css
@@ -42,14 +42,18 @@ main img {
   flex-direction: column;
 }
 
+ .group img,
+ .form-group img {
+  width: 100%;
+}
+
 .item {
   flex: 1;
   margin: 10px;
 }
 
-.item-double {
-  flex: 2;
-}
+
+
 
 /* -------  Navigation ------- */
 
@@ -65,7 +69,13 @@ header {
   color: #ecdbc9;
 }
 
-header nav ul li {
+header nav {
+  display: flex;
+  justify-content: center;
+}
+
+header nav ul {
+  display: flex;
   list-style-type: none;
 }
 
@@ -75,10 +85,6 @@ header nav ul li a {
   padding: 0 20px 0 0;
 }
 
-header nav ul li a:hover {
-  color: #bdbdbd;
-  text-decoration: none;
-}
 
 /* -------  Join Form ------- */
 form {
@@ -86,12 +92,25 @@ form {
   padding: 10px;
 }
 
+.form-group {     /*---- added ----*/
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.form-input {     /*---- added ----*/
+  display: flex;
+  justify-content: space-between;
+}
+
 form label {
+  display: flex;  /*----added----*/
   font-weight: bold;
 }
 
 form select,
 form input {
+  display: flex;    /*----added----*/
   margin-bottom: 20px;
   width: 180px;
 }
@@ -118,3 +137,37 @@ footer p {
 }
 
 /* -------  Media Query ------- */
+@media all and (min-width: 768px) {
+  header {
+    display: flex;
+    justify-content: space-between;
+    padding: 0, 30px;
+  }
+
+  header h1 {
+    margin: 14px 0;
+    padding-top: 0;
+  }
+
+  header nav ul li a:hover {
+    color: #bdbdbd;
+    text-decoration: none;
+  }
+
+  .form-group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+
+  .group {
+    display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+  }
+
+  .item-double {
+    flex: 2;
+    margin: 10px;
+  }
+}
