--- a/style.css
+++ b/style.css
@@ -92,25 +92,25 @@ form {
   padding: 10px;
 }
 
-.form-group {     /*---- added ----*/
+.form-group {    
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.form-input {     /*---- added ----*/
+.form-input {     
   display: flex;
   justify-content: space-between;
 }
 
 form label {
-  display: flex;  /*----added----*/
+  display: flex;  
   font-weight: bold;
 }
 
 form select,
 form input {
-  display: flex;    /*----added----*/
+  display: flex;    
   margin-bottom: 20px;
   width: 180px;
 }
