--- a/style.css
+++ b/style.css
@@ -31,18 +31,22 @@ section.alternate-background {
   color: #ecdbc9;
 }
 
-main img {
+/* main img {
   width: 100px;
-}
+} */
 
 /* ---  Groups & Items --- */
 
 .group {
   display: flex;
   flex-direction: column;
+  align-items: center;
 }
 
- .group img,
+ .group img {
+  width: 100%;
+ }
+ 
  .form-group img {
   width: 100%;
 }
@@ -51,6 +55,8 @@ main img {
   flex: 1;
   margin: 10px;
 }
+
+
 
 
 
@@ -112,7 +118,7 @@ form select,
 form input {
   display: flex;    
   margin-bottom: 20px;
-  width: 120px;
+  width: 50%;
 }
 
 form button {
@@ -154,6 +160,17 @@ footer p {
     text-decoration: none;
   }
 
+  .group {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+  }
+  
+  .item-double {
+    flex: 2;
+    margin: 10px;
+  }
+
   .form-group {
     display: flex;
     flex-direction: row;
@@ -167,15 +184,3 @@ footer p {
   width: 180px;
 }
   }
-
-  .group {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-  }
-
-  .item-double {
-    flex: 2;
-    margin: 10px;
-  }
-}
